--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;1,600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css" />
 
   <title>Tāne Kaio</title>
 </head>
@@ -18,5 +19,7 @@
 <body>
   <div id="root"></div>
 </body>
+
+
 
 </html>
